[package]
name = "byte_chunk"
version = "0.1.0"
authors = ["Klaatu01"]
edition = "2018"
repository = "https://github.com/klaatu01/byte_chunk"
description = "Chunk Vecs or Slices by size in Bytes"
readme = "README.md"
license = "MIT"
keywords = ["chunk", "bytes", "size"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
